<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.kit.bletest.MainActivity">
    <item
        android:id="@+id/action_save"
        android:orderInCategory="500"
        android:title="@string/action_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_energyuse"
        android:orderInCategory="400"
        android:title="@string/action_energyuse"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_latency"
        android:orderInCategory="300"
        android:title="@string/action_latency"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_testmode"
        android:orderInCategory="200"
        android:title="@string/action_testmode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_compatibility"
        app:showAsAction="never" />
</menu>
